fix GET all players
